map endpoints and manager
